# WrongMath

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  docs-pages.yml
docs/: Doxyfile.in
examples/add_example/: CMakeLists.txt  README.md  add_example.cpp
include/wrong_math/: wrong_math.hpp
src/: wrong_diff.cpp  wrong_sum.cpp
tests/: unit_tests_main.cpp
